--- a/Pixed/Windows/MainWindow.axaml
+++ b/Pixed/Windows/MainWindow.axaml
@@ -8,7 +8,6 @@
         xmlns:mainsections="clr-namespace:Pixed.Controls.MainWindowSections"
         xmlns:dd="urn:gong-wpf-dragdrop"
         xmlns:viewmodels="clr-namespace:Pixed.ViewModels"
-        xmlns:colorpicker="clr-namespace:ColorPicker;assembly=ColorPicker.AvaloniaUI"
         xmlns:converters="clr-namespace:Pixed.Converters"
         mc:Ignorable="d"
         Title="Pixed" Height="600" Width="800" Background="#1D1D1D" KeyDown="Window_KeyDown" WindowState="Maximized">
@@ -77,69 +76,9 @@
 
       <ScrollViewer Grid.Column="4" Width="242" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
         <StackPanel Name="rightPanel" Grid.Column="4" Width="226" HorizontalAlignment="Stretch">
-          <mainsections:Section>
-            <colorpicker:StandardColorPicker Width="186" Height="400" SelectedColor="{Binding PrimaryColor,Mode=TwoWay}" SecondaryColor="{Binding SecondaryColor, Mode=TwoWay}"/>
-          </mainsections:Section>
+          <mainsections:PaletteSection/>
           <mainsections:LayersSection/>
-          <Border BorderThickness="2" BorderBrush="#888" Margin="8">
-            <StackPanel>
-              <TextBlock Text="Transform" Height="32" Foreground="White" FontSize="15" Padding="4" FontWeight="Bold"/>
-              <UniformGrid Rows="1" Columns="4" Width="184" Height="46">
-                <controls:ToolButton Command="{Binding ToolFlipCommand}" Source="avares://Pixed/Resources/Icons/transform/tool-flip.png" Grid.Column="0" Grid.Row="0" Theme="{StaticResource ToolButton}"/>
-                <controls:ToolButton Command="{Binding ToolRotateCommand}" Source="avares://Pixed/Resources/Icons/transform/tool-rotate.png" Grid.Column="1" Grid.Row="0" Theme="{StaticResource ToolButton}"/>
-                <controls:ToolButton Command="{Binding ToolCenterCommand}" Source="avares://Pixed/Resources/Icons/transform/tool-center.png" Grid.Column="2" Grid.Row="0" Theme="{StaticResource ToolButton}"/>
-                <controls:ToolButton Command="{Binding ToolCropCommand}" Source="avares://Pixed/Resources/Icons/transform/tool-crop.png" Grid.Column="3" Grid.Row="0" Theme="{StaticResource ToolButton}"/>
-              </UniformGrid>
-            </StackPanel>
-          </Border>
-
-          <Border BorderThickness="2" BorderBrush="#888" Margin="8">
-            <StackPanel>
-              <TextBlock Text="Palettes" Height="32" Foreground="White" FontSize="15" Padding="4" FontWeight="Bold"/>
-              <TabControl BorderThickness="0" Background="Transparent" Padding="0">
-                <TabItem Header="Palette" Background="Transparent" Foreground="White" HorizontalAlignment="Stretch">
-                  <StackPanel>
-                    <Grid>
-                      <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                      </Grid.ColumnDefinitions>
-                      <Grid.RowDefinitions>
-                        <RowDefinition Height="26"/>
-                      </Grid.RowDefinitions>
-                      <Button Theme="{StaticResource LayersButton}" Command="{Binding PaletteAddPrimaryCommand}">
-                        <Image Source="avares://Pixed/Resources/Icons/common/plus.png" Width="10" Height="10"/>
-                      </Button>
-                      <Button Theme="{StaticResource LayersButton}" Grid.Column="1" Command="{Binding PaletteAddCurrentCommand}">
-                        <Image Source="avares://Pixed/Resources/Icons/merge_palettes.png" Width="10" Height="10"/>
-                      </Button>
-                      <Button Theme="{StaticResource LayersButton}" Grid.Column="2" Command="{Binding PaletteListCommand}">
-                        <Image Source="avares://Pixed/Resources/Icons/database.png" Width="10" Height="10"/>
-                      </Button>
-                      <Button Theme="{StaticResource LayersButton}" Grid.Column="3" Command="{Binding PaletteOpenCommand}">
-                        <Image Source="avares://Pixed/Resources/Icons/folder-open.png" Width="10" Height="10"/>
-                      </Button>
-                      <Button Theme="{StaticResource LayersButton}" Grid.Column="4" Command="{Binding PaletteSaveCommand}">
-                        <Image Source="avares://Pixed/Resources/Icons/floppy-disk.png" Width="10" Height="10"/>
-                      </Button>
-                      <Button Theme="{StaticResource LayersButton}" Grid.Column="5" Command="{Binding PaletteClearCommand}">
-                        <Image Source="avares://Pixed/Resources/Icons/common/cross.png" Width="10" Height="10"/>
-                      </Button>
-                    </Grid>
-                    <controls:ColorGrid Columns="5" Colors="{Binding SelectedPaletteColors}"/>
-                  </StackPanel>
-                </TabItem>
-                <TabItem Header="Image" Background="Transparent" Foreground="White" HorizontalAlignment="Stretch">
-                  <controls:ColorGrid Columns="5" Colors="{Binding CurrentPaletteColors}"/>
-                </TabItem>
-              </TabControl>
-            </StackPanel>
-          </Border>
-
+          <mainsections:TransformSection/>
           <Border BorderThickness="2" BorderBrush="#888" Margin="8">
             <StackPanel>
               <TextBlock Text="Touch buttons" Height="32" Foreground="White" FontSize="15" Padding="4" FontWeight="Bold"/>
