--- a/Pixed/Windows/MainWindow.axaml
+++ b/Pixed/Windows/MainWindow.axaml
@@ -33,8 +33,8 @@
         <!-- Open/close button-->
         <ColumnDefinition Width="auto"/>
       </Grid.ColumnDefinitions>
-      
-
+     
+      <mainsections:FramesSection/>
       <Grid Name="centerPanel" Grid.Column="2">
         <Grid.RowDefinitions>
           <RowDefinition Height="60"/>
