--- a/Pixed/Controls/TooltipWithButton.axaml
+++ b/Pixed/Controls/TooltipWithButton.axaml
@@ -9,7 +9,7 @@
     <StackPanel Background="Black">
         <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5" Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TooltipWithButton}}" Foreground="White"></TextBlock>
         <WrapPanel>
-            <Border Padding="2" BorderBrush="#999" BorderThickness="1" Margin="0,0,5,0">
+            <Border Padding="2" BorderBrush="{StaticResource ButtonBorder}" BorderThickness="1" Margin="0,0,5,0">
                 <TextBlock Text="{Binding ButtonText, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TooltipWithButton}}" FontSize="10" Foreground="White"/>
             </Border>
             <TextBlock FontSize="12" Foreground="White" Text="{Binding ButtonTextHelper, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TooltipWithButton}}"/>
