--- a/Pixed/Controls/MainWindowSections/FramesSection.axaml
+++ b/Pixed/Controls/MainWindowSections/FramesSection.axaml
@@ -7,38 +7,45 @@
              xmlns:vm="clr-namespace:Pixed.ViewModels"
              xmlns:controls="clr-namespace:Pixed.Controls"
              x:Class="Pixed.Controls.MainWindowSections.FramesSection">
-  <UserControl.DataContext>
-    <vm:FramesSectionViewModel/>
-  </UserControl.DataContext>
-  <StackPanel x:Name="framesPanel" Width="124">
-    <Grid Margin="6, 0, 6, 0">
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*"/>
-        <ColumnDefinition Width="*"/>
-      </Grid.ColumnDefinitions>
-      <Grid.RowDefinitions>
-        <RowDefinition Height="32"/>
-      </Grid.RowDefinitions>
-      <Button Command="{Binding DuplicateFrameCommand}" Theme="{StaticResource FramesButton}">
-        <Image Source="avares://Pixed/Resources/Icons/frame/frame-duplicate-white.png" Width="32" Height="32"/>
-      </Button>
-      <Button Grid.Column="1" Command="{Binding RemoveFrameCommand}" IsVisible="{Binding RemoveFrameVisibility}" Theme="{StaticResource FramesButton}">
-        <Image Source="avares://Pixed/Resources/Icons/frame/frame-recyclebin-white.png" Width="32" Height="32"/>
-      </Button>
-    </Grid>
-    <ListBox Classes="FramesDragAndDrop" ItemsSource="{Binding Frames}" SelectedIndex="{Binding SelectedFrame, Mode=TwoWay}" Width="110"
-             Background="{StaticResource BaseBackground}">
-      <ListBox.ItemTemplate>
-        <DataTemplate>
-          <controls:FrameListControl/>
-        </DataTemplate>
-      </ListBox.ItemTemplate>
-    </ListBox>
-    <Button Margin="3" Command="{Binding NewFrameCommand}" Theme="{StaticResource CreateFrameButton}">
-      <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-        <Image Margin="3" Width="26" Height="26" Source="avares://Pixed/Resources/Icons/frame/frame-plus-white.png"/>
-        <TextBlock Text="New frame" FontSize="13" Foreground="White" VerticalAlignment="Center"/>
-      </StackPanel>
-    </Button>
-  </StackPanel>
+	<UserControl.DataContext>
+		<vm:FramesSectionViewModel/>
+	</UserControl.DataContext>
+	<StackPanel x:Name="framesPanel" Width="124">
+		<Grid Margin="6, 0, 6, 0">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*"/>
+				<ColumnDefinition Width="*"/>
+				<ColumnDefinition Width="*"/>
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="32"/>
+			</Grid.RowDefinitions>
+			<Button Command="{Binding NewFrameCommand}" Theme="{StaticResource FramesButton}">
+				<Image Source="avares://Pixed/Resources/Icons/frame/frame-plus-white.png" Width="20" Height="20"/>
+				<ToolTip.Tip>
+					<controls:SimpleTooltip Title="New frame"/>
+				</ToolTip.Tip>
+			</Button>
+			<Button Grid.Column="1" Command="{Binding DuplicateFrameCommand}" Theme="{StaticResource FramesButton}">
+				<Image Source="avares://Pixed/Resources/Icons/frame/frame-duplicate-white.png" Width="20" Height="20"/>
+				<ToolTip.Tip>
+					<controls:SimpleTooltip Title="Duplicate frame"/>
+				</ToolTip.Tip>
+			</Button>
+			<Button Grid.Column="2" Command="{Binding RemoveFrameCommand}" IsVisible="{Binding RemoveFrameVisibility}" Theme="{StaticResource FramesButton}">
+				<Image Source="avares://Pixed/Resources/Icons/frame/frame-recyclebin-white.png" Width="20" Height="20"/>
+				<ToolTip.Tip>
+					<controls:SimpleTooltip Title="Remove frame"/>
+				</ToolTip.Tip>
+			</Button>
+		</Grid>
+		<ListBox Classes="FramesDragAndDrop" ItemsSource="{Binding Frames}" SelectedIndex="{Binding SelectedFrame, Mode=TwoWay}" Width="110"
+				 Background="{StaticResource BaseBackground}">
+			<ListBox.ItemTemplate>
+				<DataTemplate>
+					<controls:FrameListControl/>
+				</DataTemplate>
+			</ListBox.ItemTemplate>
+		</ListBox>
+	</StackPanel>
 </UserControl>
