--- a/Pixed/Controls/MainWindowSections/TransformSection.axaml
+++ b/Pixed/Controls/MainWindowSections/TransformSection.axaml
@@ -8,18 +8,42 @@
              xmlns:controls="clr-namespace:Pixed.Controls"
              xmlns:colorpicker="clr-namespace:ColorPicker;assembly=ColorPicker.AvaloniaUI"
              x:Class="Pixed.Controls.MainWindowSections.TransformSection">
-  <UserControl.DataContext>
-    <vm:TransformSectionViewModel/>
-  </UserControl.DataContext>
-  <local:Section>
-    <StackPanel>
-      <TextBlock Text="Transform" Height="32" Foreground="White" FontSize="15" Padding="4" FontWeight="Bold"/>
-      <UniformGrid Rows="1" Columns="4" Width="184" Height="46">
-        <controls:ToolButton Command="{Binding ToolCommand}" CommandParameter="{Binding ToolFlip}" Source="avares://Pixed/Resources/Icons/transform/tool-flip.png" Grid.Column="0" Grid.Row="0" Theme="{StaticResource ToolButton}"/>
-        <controls:ToolButton Command="{Binding ToolCommand}" CommandParameter="{Binding ToolRotate}" Source="avares://Pixed/Resources/Icons/transform/tool-rotate.png" Grid.Column="1" Grid.Row="0" Theme="{StaticResource ToolButton}"/>
-        <controls:ToolButton Command="{Binding ToolCommand}" CommandParameter="{Binding ToolCenter}" Source="avares://Pixed/Resources/Icons/transform/tool-center.png" Grid.Column="2" Grid.Row="0" Theme="{StaticResource ToolButton}"/>
-        <controls:ToolButton Command="{Binding ToolCommand}" CommandParameter="{Binding ToolCrop}" Source="avares://Pixed/Resources/Icons/transform/tool-crop.png" Grid.Column="3" Grid.Row="0" Theme="{StaticResource ToolButton}"/>
-      </UniformGrid>
-    </StackPanel>
-  </local:Section>
+	<UserControl.DataContext>
+		<vm:TransformSectionViewModel/>
+	</UserControl.DataContext>
+	<local:Section>
+		<StackPanel>
+			<TextBlock Text="Transform" Height="32" Foreground="White" FontSize="15" Padding="4" FontWeight="Bold"/>
+			<UniformGrid Rows="1" Columns="4" Width="184" Height="46">
+				<controls:ToolButton Command="{Binding ToolCommand}" CommandParameter="{Binding ToolFlip}" Source="avares://Pixed/Resources/Icons/transform/tool-flip.png" Grid.Column="0" Grid.Row="0" Theme="{StaticResource ToolButton}">
+					<ToolTip.Tip>
+						<controls:TooltipWith3Buttons Title="Flip horizontaly"
+																  ButtonText1="Alt" ButtonTextHelper1="Flip vertically"
+																  ButtonText2="Ctrl" ButtonTextHelper2="Apply to all layers"
+																  ButtonText3="Shift" ButtonTextHelper3="Apply to all frames"/>
+					</ToolTip.Tip>
+				</controls:ToolButton>
+				<controls:ToolButton Command="{Binding ToolCommand}" CommandParameter="{Binding ToolRotate}" Source="avares://Pixed/Resources/Icons/transform/tool-rotate.png" Grid.Column="1" Grid.Row="0" Theme="{StaticResource ToolButton}">
+					<ToolTip.Tip>
+						<controls:TooltipWith3Buttons Title="Counter-clockwise rotation"
+																ButtonText1="Alt" ButtonTextHelper1="Clockwise rotation"
+																ButtonText2="Ctrl"  ButtonTextHelper2="Apply to all layers"
+																ButtonText3="Shift" ButtonTextHelper3="Apply to all frames"/>
+					</ToolTip.Tip>
+				</controls:ToolButton>
+				<controls:ToolButton Command="{Binding ToolCommand}" CommandParameter="{Binding ToolCenter}" Source="avares://Pixed/Resources/Icons/transform/tool-center.png" Grid.Column="2" Grid.Row="0" Theme="{StaticResource ToolButton}">
+					<ToolTip.Tip>
+						<controls:TooltipWith2Buttons Title="Align image to the center"
+																ButtonText1="Ctrl" ButtonTextHelper1="Apply to all layers"
+																ButtonText2="Shift" ButtonTextHelper2="Apply to all frames"/>
+					</ToolTip.Tip>
+				</controls:ToolButton>
+				<controls:ToolButton Command="{Binding ToolCommand}" CommandParameter="{Binding ToolCrop}" Source="avares://Pixed/Resources/Icons/transform/tool-crop.png" Grid.Column="3" Grid.Row="0" Theme="{StaticResource ToolButton}">
+					<ToolTip.Tip>
+						<controls:SimpleTooltip Title="Crop to fit the content or the selection. Applies to all frames and layers!"/>
+					</ToolTip.Tip>
+				</controls:ToolButton>
+			</UniformGrid>
+		</StackPanel>
+	</local:Section>
 </UserControl>
