--- a/Pixed/Windows/MainWindow.axaml
+++ b/Pixed/Windows/MainWindow.axaml
@@ -10,52 +10,69 @@
         xmlns:viewmodels="clr-namespace:Pixed.ViewModels"
         xmlns:converters="clr-namespace:Pixed.Converters"
         mc:Ignorable="d"
-        Title="Pixed" Height="600" Width="800" 
+        Title="Pixed" Height="600" Width="800"
         Background="{StaticResource BaseBackground}" WindowState="Maximized"
-        KeyDown="Window_KeyDown" 
+        KeyDown="Window_KeyDown"
         KeyUp="Window_KeyUp"
         PointerPressed="Window_PointerPressed"
-        PointerReleased="Window_PointerReleased">
-  <Window.DataContext>
-    <viewmodels:MainViewModel/>
-  </Window.DataContext>
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="80"/>
-      <ColumnDefinition Width="*"/>
-    </Grid.ColumnDefinitions>
-    <mainsections:ToolsSection x:Name="toolsSection"/>
-    <Grid x:Name="mainSection" Grid.Column="1">
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="124"/>
-        <ColumnDefinition Width="auto"/>
-        <!-- Open/close button-->
-        <ColumnDefinition Width="*"/>
-        <ColumnDefinition Width="auto"/>
-        <!-- Open/close button-->
-        <ColumnDefinition Width="auto"/>
-      </Grid.ColumnDefinitions>
-     
-      <mainsections:FramesSection/>
-      <Grid Name="centerPanel" Grid.Column="2">
-        <Grid.RowDefinitions>
-          <RowDefinition Height="60"/>
-          <RowDefinition Height="*">
-          </RowDefinition>
-        </Grid.RowDefinitions>
-        <controls:PaintCanvas Grid.Row="1" x:Name="paintCanvas"/>
-      </Grid>
+        PointerReleased="Window_PointerReleased"
+		WindowStartupLocation="CenterScreen"
+		ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="NoChrome"
+        ExtendClientAreaTitleBarHeightHint="-1"
+		NativeMenu.Menu="{Binding Menu}">
+	<Window.DataContext>
+		<viewmodels:MainViewModel/>
+	</Window.DataContext>
+	<Window.KeyBindings>
+		<KeyBinding Gesture="CTRL+Q"
+					Command="{Binding QuitCommand}"></KeyBinding>
+	</Window.KeyBindings>
 
-      <ScrollViewer Grid.Column="4" Width="242" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
-        <StackPanel Name="rightPanel" Grid.Column="4" Width="226" HorizontalAlignment="Stretch">
-          <mainsections:PaletteSection/>
-          <mainsections:LayersSection/>
-          <mainsections:TransformSection/>
-        </StackPanel>
-      </ScrollViewer>
-    </Grid>
-  </Grid>
+	<DockPanel HorizontalAlignment="Stretch"
+			   VerticalAlignment="Stretch"
+			   Name="ContentWrapper">
+		<controls:CustomTitleBar IsSeamless="True"/>
+		<DockPanel Background="Transparent">
+			<Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="*"/>
+				</Grid.RowDefinitions>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="80"/>
+					<ColumnDefinition Width="*"/>
+				</Grid.ColumnDefinitions>
+				<mainsections:ToolsSection x:Name="toolsSection"/>
+				<Grid x:Name="mainSection" Grid.Column="1">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="124"/>
+						<ColumnDefinition Width="auto"/>
+						<!-- Open/close button-->
+						<ColumnDefinition Width="*"/>
+						<ColumnDefinition Width="auto"/>
+						<!-- Open/close button-->
+						<ColumnDefinition Width="auto"/>
+					</Grid.ColumnDefinitions>
+
+					<mainsections:FramesSection/>
+					<Grid Name="centerPanel" Grid.Column="2">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="60"/>
+							<RowDefinition Height="*">
+							</RowDefinition>
+						</Grid.RowDefinitions>
+						<controls:PaintCanvas Grid.Row="1" x:Name="paintCanvas"/>
+					</Grid>
+
+					<ScrollViewer Grid.Column="4" Width="242" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
+						<StackPanel Name="rightPanel" Grid.Column="4" Width="226" HorizontalAlignment="Stretch">
+							<mainsections:PaletteSection/>
+							<mainsections:LayersSection/>
+							<mainsections:TransformSection/>
+						</StackPanel>
+					</ScrollViewer>
+				</Grid>
+			</Grid>
+		</DockPanel>
+	</DockPanel>
 </Window>
