--- a/Pixed/Colors.axaml
+++ b/Pixed/Colors.axaml
@@ -10,6 +10,7 @@
   <Color x:Key="ButtonBorder">#888888</Color>
   <Color x:Key="BaseBorder">#444444</Color>
   <Color x:Key="BaseBackground">#1D1D1D</Color>
+  <Color x:Key="BaseBackgroundHover">#171717</Color>
   <Color x:Key="Accent">#0c548b</Color>
   <Color x:Key="ButtonBackground">#3f3f3f</Color>
 </ResourceDictionary>
