--- a/Pixed/Controls/MainWindowSections/LayersSection.axaml
+++ b/Pixed/Controls/MainWindowSections/LayersSection.axaml
@@ -23,40 +23,40 @@
 					<ColumnDefinition Width="*"/>
 				</Grid.ColumnDefinitions>
 				<Grid.RowDefinitions>
-					<RowDefinition Height="26"/>
+					<RowDefinition Height="32"/>
 				</Grid.RowDefinitions>
-				<Button Theme="{StaticResource LayersButton}" Command="{Binding AddLayerCommand}">
-					<Image Source="avares://Pixed/Resources/Icons/common/plus.png" Width="10" Height="10"/>
+				<Button Theme="{StaticResource BaseButton}" Command="{Binding AddLayerCommand}">
+					<Image Source="avares://Pixed/Resources/Icons/common/plus.png" Width="20" Height="20"/>
 					<ToolTip.Tip>
 						<controls:TooltipWithButton Title="Add Layer" ButtonText="Shift" ButtonTextHelper="Clone current layer"/>
 					</ToolTip.Tip>
 				</Button>
-				<Button Theme="{StaticResource LayersButton}" Grid.Column="1" Command="{Binding MoveLayerUpCommand}" IsEnabled="{Binding CanLayerMoveUp}">
-					<Image Source="avares://Pixed/Resources/Icons/common/arrow-up.png" Width="10" Height="10"/>
+				<Button Theme="{StaticResource BaseButton}" Grid.Column="1" Command="{Binding MoveLayerUpCommand}" IsEnabled="{Binding CanLayerMoveUp}">
+					<Image Source="avares://Pixed/Resources/Icons/common/arrow-up.png" Width="20" Height="20"/>
 					<ToolTip.Tip>
 						<controls:TooltipWithButton Title="Move layer up" ButtonText="Shift" ButtonTextHelper="Move to the top"/>
 					</ToolTip.Tip>
 				</Button>
-				<Button Theme="{StaticResource LayersButton}" Grid.Column="2" Command="{Binding MoveLayerDownCommand}" IsEnabled="{Binding CanLayerMoveDown}">
-					<Image Source="avares://Pixed/Resources/Icons/common/arrow-down.png" Width="10" Height="10"/>
+				<Button Theme="{StaticResource BaseButton}" Grid.Column="2" Command="{Binding MoveLayerDownCommand}" IsEnabled="{Binding CanLayerMoveDown}">
+					<Image Source="avares://Pixed/Resources/Icons/common/arrow-down.png" Width="20" Height="20"/>
 					<ToolTip.Tip>
 						<controls:TooltipWithButton Title="Move layer down" ButtonText="Shift" ButtonTextHelper="Move to the bottom"/>
 					</ToolTip.Tip>
 				</Button>
-				<Button Theme="{StaticResource LayersButton}" Grid.Column="3" Command="{Binding EditLayerNameCommand}">
-					<Image Source="avares://Pixed/Resources/Icons/common/pencil.png" Width="10" Height="10"/>
+				<Button Theme="{StaticResource BaseButton}" Grid.Column="3" Command="{Binding EditLayerNameCommand}">
+					<Image Source="avares://Pixed/Resources/Icons/common/pencil.png" Width="20" Height="20"/>
 					<ToolTip.Tip>
 						<controls:SimpleTooltip Title="Edit layer name"/>
 					</ToolTip.Tip>
 				</Button>
-				<Button Theme="{StaticResource LayersButton}" Grid.Column="4" Command="{Binding MergeLayerCommand}" IsEnabled="{Binding CanLayerMerge}">
-					<Image Source="avares://Pixed/Resources/Icons/common/download2.png" Width="10" Height="10"/>
+				<Button Theme="{StaticResource BaseButton}" Grid.Column="4" Command="{Binding MergeLayerCommand}" IsEnabled="{Binding CanLayerMerge}">
+					<Image Source="avares://Pixed/Resources/Icons/common/download2.png" Width="20" Height="20"/>
 					<ToolTip.Tip>
 						<controls:SimpleTooltip Title="Merge with layer below"/>
 					</ToolTip.Tip>
 				</Button>
-				<Button Theme="{StaticResource LayersButton}" Grid.Column="5" Command="{Binding RemoveLayerCommand}" IsEnabled="{Binding CanLayerRemove}">
-					<Image Source="avares://Pixed/Resources/Icons/common/cross.png" Width="10" Height="10"/>
+				<Button Theme="{StaticResource BaseButton}" Grid.Column="5" Command="{Binding RemoveLayerCommand}" IsEnabled="{Binding CanLayerRemove}">
+					<Image Source="avares://Pixed/Resources/Icons/common/cross.png" Width="20" Height="20"/>
 					<ToolTip.Tip>
 						<controls:SimpleTooltip Title="Delete selected layer"/>
 					</ToolTip.Tip>
@@ -64,7 +64,7 @@
 			</Grid>
 			<ListBox ItemsSource="{Binding Layers}"
 			 SelectedIndex="{Binding SelectedLayer, Mode=TwoWay}"
-			 Background="{StaticResource BaseBorder}">
+			 Background="{StaticResource BaseBorder}" ItemContainerTheme="{StaticResource LayersListBoxItem}">
 				<ListBox.ItemTemplate>
 					<DataTemplate>
 						<controls:LayerListControl/>
