--- a/Pixed/Controls/MainWindowSections/PaletteSection.axaml
+++ b/Pixed/Controls/MainWindowSections/PaletteSection.axaml
@@ -30,39 +30,39 @@
 								<ColumnDefinition Width="*"/>
 							</Grid.ColumnDefinitions>
 							<Grid.RowDefinitions>
-								<RowDefinition Height="26"/>
+								<RowDefinition Height="32"/>
 							</Grid.RowDefinitions>
-							<Button Theme="{StaticResource LayersButton}" Command="{Binding PaletteAddPrimaryCommand}">
+							<Button Theme="{StaticResource BaseButton}" Command="{Binding PaletteAddPrimaryCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/common/plus.png" Width="10" Height="10"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Add Primary color to palette"/>
 								</ToolTip.Tip>
 							</Button>
-							<Button Theme="{StaticResource LayersButton}" Grid.Column="1" Command="{Binding PaletteAddCurrentCommand}">
+							<Button Theme="{StaticResource BaseButton}" Grid.Column="1" Command="{Binding PaletteAddCurrentCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/merge_palettes.png" Width="10" Height="10"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Merge palette with current colors"/>
 								</ToolTip.Tip>
 							</Button>
-							<Button Theme="{StaticResource LayersButton}" Grid.Column="2" Command="{Binding PaletteListCommand}">
+							<Button Theme="{StaticResource BaseButton}" Grid.Column="2" Command="{Binding PaletteListCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/database.png" Width="10" Height="10"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Palettes list"/>
 								</ToolTip.Tip>
 							</Button>
-							<Button Theme="{StaticResource LayersButton}" Grid.Column="3" Command="{Binding PaletteOpenCommand}">
+							<Button Theme="{StaticResource BaseButton}" Grid.Column="3" Command="{Binding PaletteOpenCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/folder-open.png" Width="10" Height="10"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Open palette from file"/>
 								</ToolTip.Tip>
 							</Button>
-							<Button Theme="{StaticResource LayersButton}" Grid.Column="4" Command="{Binding PaletteSaveCommand}">
+							<Button Theme="{StaticResource BaseButton}" Grid.Column="4" Command="{Binding PaletteSaveCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/floppy-disk.png" Width="10" Height="10"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Save palette to file"/>
 								</ToolTip.Tip>
 							</Button>
-							<Button Theme="{StaticResource LayersButton}" Grid.Column="5" Command="{Binding PaletteClearCommand}">
+							<Button Theme="{StaticResource BaseButton}" Grid.Column="5" Command="{Binding PaletteClearCommand}">
 								<Image Source="avares://Pixed/Resources/Icons/common/cross.png" Width="10" Height="10"/>
 								<ToolTip.Tip>
 									<controls:SimpleTooltip Title="Clear palette"/>
