--- a/Pixed/Controls/SimpleTooltip.axaml
+++ b/Pixed/Controls/SimpleTooltip.axaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-        <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5" Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=local:SimpleTooltip}}" Foreground="White"></TextBlock>
+        <TextBlock FontWeight="Bold" FontSize="14" Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=local:SimpleTooltip}}" Foreground="White"></TextBlock>
     </StackPanel>
 </UserControl>
