--- a/Pixed/Controls/PaintCanvas.axaml
+++ b/Pixed/Controls/PaintCanvas.axaml
@@ -14,12 +14,13 @@
     x:Name="scrollView"
     VerticalScrollBarVisibility="Auto" 
     HorizontalScrollBarVisibility="Auto">
-        <Grid Name="imageGrid" Width="{Binding GridWidth}" Height="{Binding GridHeight}">
+        <Grid Name="imageGrid" Width="{Binding GridWidth, Mode=TwoWay}" Height="{Binding GridHeight, Mode=TwoWay}">
             <Grid.Background>
 				<ImageBrush Source="avares://Pixed/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
             </Grid.Background>
             <Image Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaImageBitmap}"/>
             <Image Name="overlay" RenderOptions.BitmapInterpolationMode="None" Source="{Binding AvaloniaOverlayBitmap}"/>
+			<Canvas Background="{Binding GridBrush}"/>
 			<Border Background="Transparent" 
 					PointerExited="Border_PointerExited"
 					PointerMoved="Border_PointerMoved"
