--- a/Pixed/Windows/ResizeProjectWindow.axaml
+++ b/Pixed/Windows/ResizeProjectWindow.axaml
@@ -6,7 +6,8 @@
         x:Class="Pixed.Windows.ResizeProjectWindow"
         Title="Resize Project" MinWidth="200"
         xmlns:vm="clr-namespace:Pixed.ViewModels"
-        MinHeight="230">
+        MinHeight="230" ShowInTaskbar="False" SizeToContent="WidthAndHeight"
+        WindowStartupLocation="CenterOwner">
   <Window.DataContext>
     <vm:ResizeProjectWindowViewModel/>
   </Window.DataContext>
