--- a/Pixed/Controls/CustomTitleBar.axaml
+++ b/Pixed/Controls/CustomTitleBar.axaml
@@ -15,7 +15,7 @@
 				<StackPanel Orientation="Horizontal"
 							DockPanel.Dock="Left"
 							Spacing="0">
-					<Image Source="avares://Pixed/Resources/Icons/bin.png"
+					<Image Source="avares://Pixed/Resources/icon.png"
 						   Height="20"
 						   Width="20"
 						   VerticalAlignment="Center"
