--- a/Pixed/Windows/PaletteWindow.axaml
+++ b/Pixed/Windows/PaletteWindow.axaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pixed" xmlns:viewmodels="clr-namespace:Pixed.ViewModels" xmlns:controls="clr-namespace:Pixed.Controls"
         mc:Ignorable="d"
-        Title="PaletteWindow" Height="600" Width="800" Background="{StaticResource BaseBackground}" WindowStartupLocation="CenterOwner">
+        Title="PaletteWindow" Height="600" Width="800" Background="{StaticResource BaseBackground}" WindowStartupLocation="CenterOwner"
+        Icon="avares://Pixed/Resources/icon.ico">
     <Window.DataContext>
         <viewmodels:PaletteWindowViewModel/>
     </Window.DataContext>
