--- a/Pixed/Windows/Prompt.axaml
+++ b/Pixed/Windows/Prompt.axaml
@@ -8,7 +8,8 @@
         Title="Prompt" MinWidth="200"
         MinHeight="150"
         ShowInTaskbar="False" SizeToContent="WidthAndHeight"
-        WindowStartupLocation="CenterOwner">
+        WindowStartupLocation="CenterOwner"
+        Icon="avares://Pixed/Resources/icon.ico">
     <StackPanel>
         <TextBlock Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=local:Prompt}}" Margin="10"/>
         <TextBox x:Name="textBox" Margin="10" Text="{Binding DefaultValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:Prompt}}"/>
