--- a/Pixed/Windows/YesNoCancelWindow.axaml
+++ b/Pixed/Windows/YesNoCancelWindow.axaml
@@ -7,6 +7,7 @@
         x:Class="Pixed.Windows.YesNoCancelWindow"
         Title="YesNoCancelWindow" ShowInTaskbar="False" SizeToContent="WidthAndHeight"
         WindowStartupLocation="CenterOwner"
+        Icon="avares://Pixed/Resources/icon.ico"
 		MinWidth="400">
 	<StackPanel Margin="5">
 		<TextBlock Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType=local:YesNoCancelWindow}}"/>
